[gd_scene load_steps=12 format=3 uid="uid://ohkq2yimyfak"]

[ext_resource type="Script" uid="uid://dxjx1v8suhs8f" path="res://Scripts/ui_manager.gd" id="1_ui_mgr"]
[ext_resource type="Texture2D" uid="uid://bb6p0ous5qhfi" path="res://Assets/Images/UI/FLECHA_IZQUIERDA.png" id="2_left"]
[ext_resource type="Texture2D" uid="uid://d7b117old0t7" path="res://Assets/Images/UI/FLECHA_DERECHA.png" id="3_right"]
[ext_resource type="Texture2D" uid="uid://dtt6psnd7jxci" path="res://Assets/Images/UI/FLECHA_ARRIBA.png" id="4_up"]
[ext_resource type="Texture2D" uid="uid://dj1bx6q70m7l5" path="res://Assets/Images/UI/FLECHA_ABAJO.png" id="5_down"]
[ext_resource type="Script" uid="uid://bt5qb6fw70ct5" path="res://Scripts/direction_button_left.gd" id="6_btn_left"]
[ext_resource type="Script" uid="uid://peat3akbnfrf" path="res://Scripts/direction_button_right.gd" id="7_btn_right"]
[ext_resource type="Script" uid="uid://d3fj3c8g5xnr5" path="res://Scripts/direction_button_up.gd" id="8_btn_up"]
[ext_resource type="Script" uid="uid://drq08otxijrjj" path="res://Scripts/direction_button_down.gd" id="9_btn_down"]
[ext_resource type="Texture2D" uid="uid://c2hncm32q0ao0" path="res://Assets/Images/UI/MASCARA_UI.png" id="10_4jujk"]
[ext_resource type="Texture2D" uid="uid://bc4rw67nnoujl" path="res://Assets/Images/Clues/FLECHA_PISTA_PARTICULA.png" id="11_2fful"]

[node name="UI_manager" type="CanvasLayer"]
layer = 5
script = ExtResource("1_ui_mgr")

[node name="DirectionButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ButtonLeft" type="Button" parent="DirectionButtons"]
visible = false
layout_mode = 0
offset_left = 54.0
offset_top = 540.0
offset_right = 147.0
offset_bottom = 624.0
icon = ExtResource("2_left")
flat = true
script = ExtResource("6_btn_left")

[node name="ButtonRight" type="Button" parent="DirectionButtons"]
visible = false
layout_mode = 0
offset_left = 1777.0
offset_top = 540.0
offset_right = 1870.0
offset_bottom = 624.0
icon = ExtResource("3_right")
flat = true
script = ExtResource("7_btn_right")

[node name="ButtonUp" type="Button" parent="DirectionButtons"]
visible = false
layout_mode = 0
offset_left = 913.0
offset_top = 62.0
offset_right = 1010.0
offset_bottom = 146.0
icon = ExtResource("4_up")
flat = true
script = ExtResource("8_btn_up")

[node name="ButtonDown" type="Button" parent="DirectionButtons"]
visible = false
layout_mode = 0
offset_left = 913.0
offset_top = 953.0
offset_right = 1010.0
offset_bottom = 1037.0
icon = ExtResource("5_down")
flat = true
script = ExtResource("9_btn_down")

[node name="MaskButton" type="Button" parent="."]
offset_left = 299.0
offset_top = 858.0
offset_right = 451.0
offset_bottom = 1054.0
icon = ExtResource("10_4jujk")

[node name="MaskOverlay" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorFilter" type="ColorRect" parent="MaskOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0.223529)

[node name="ArrowParticles" type="CPUParticles2D" parent="MaskOverlay"]
position = Vector2(1975, 327)
scale = Vector2(1, 0.3600006)
amount = 30
texture = ExtResource("11_2fful")
lifetime = 10.0
randomness = 0.3
emission_shape = 3
emission_rect_extents = Vector2(10, 540)
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 400.0
angle_min = 180.0
angle_max = 180.0
scale_amount_min = 0.5
scale_amount_max = 1.5

[node name="ClueDisplay" type="TextureRect" parent="MaskOverlay"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.46
anchor_top = 0.72800004
anchor_right = 0.46
anchor_bottom = 0.72800004
offset_left = -188.20001
offset_top = -184.24005
offset_right = 188.79999
offset_bottom = 184.75995
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="FocusItemContainer" type="Node2D" parent="."]

[node name="InventoryPanel" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_bottom = 300.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="ColorRect" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="Title" type="Label" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
text = "Inventario"
horizontal_alignment = 1

[node name="ItemsContainer" type="VBoxContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 50.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="DirectionButtons/ButtonLeft" to="DirectionButtons/ButtonLeft" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="DirectionButtons/ButtonLeft" to="DirectionButtons/ButtonLeft" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="DirectionButtons/ButtonRight" to="DirectionButtons/ButtonRight" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="DirectionButtons/ButtonRight" to="DirectionButtons/ButtonRight" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="DirectionButtons/ButtonUp" to="DirectionButtons/ButtonUp" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="DirectionButtons/ButtonUp" to="DirectionButtons/ButtonUp" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="DirectionButtons/ButtonDown" to="DirectionButtons/ButtonDown" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="DirectionButtons/ButtonDown" to="DirectionButtons/ButtonDown" method="_on_mouse_exited"]
